--- a/netfweb/content.css
+++ b/netfweb/content.css
@@ -20,3 +20,35 @@ div.nfw_score{
     font-weight: bold;
     text-align: center;
 }
+
+span.nfw_score_bob {
+    z-index=10000;
+    font-size: 12px;
+    margin-left: 10px;
+    padding: 2px 5px;
+    pointer-events:none;
+
+    text-align: center;
+
+    background: rgba(100,100,100,0.7);
+    border: 2px solid #666;
+    color: #FF9;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 5px;
+}
+
+div.nfw_score_jaw {
+    z-index=10000;
+    font-size: 14px;
+    padding: 2px 5px;
+    clear: both;
+
+
+    background: rgba(100,100,100,0.7);
+    border: 2px solid #666;
+    color: #FF9;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 5px;
+}
