* Updating ratings when details about title are displayed * Reporting links for titles without rating * Changes due to filmweb website new html code

--- a/netfweb/content.css
+++ b/netfweb/content.css
@@ -50,6 +50,13 @@ div.nfw_score_jaw {
     border-radius: 5px;
 }
 
+div.nfw_related {
+    font-size: 14px;
+    float: right;
+}
+
+
+
 a.nfw_jaw_link {
     color: #FF9;
 
