--- a/netfweb/content.css
+++ b/netfweb/content.css
@@ -59,6 +59,7 @@ span.nfw_score_bob {
 div.nfw_score_jaw {
     font-size: 14px;
     padding: 2px 5px;
+    max-width: 600px;
     clear: both;
     margin: 5px 0;
     background: rgba(100,100,100,0.4);
