--- a/netfweb/content.css
+++ b/netfweb/content.css
@@ -43,10 +43,8 @@ div.nfw_circle_orange{
 
 span.nfw_score_bob {
     font-size: 12px;
-    margin-left: 10px;
+    margin: 0 50px;
     padding: 2px 5px;
-
-    text-align: center;
 
     background: rgba(100,100,100,0.7);
     border: 2px solid #666;
@@ -79,7 +77,7 @@ div.nfw_score_bob {
     font-size: 14px;
     padding: 2px 5px;
     clear: both;
-    margin: 5px 0;
+    margin: 5px 15px 5px 5px;
     background: rgba(100,100,100,0.4);
     border: 2px solid #666;
     color: #FF9;
